# ResumeDB

./: .gitignore  README.md  app.py  create_tables.py  fastapi_hhh.py  init_db.py  migrate_chats.py  pyproject.toml  requirements.txt  sample.env
.github/workflows/: python-app.yml
lro/: bot.py
nlqs/: description_generator.py  nlqs.py  parameters.py  query.py
nlqs/database/: postgres.py  sqlite.py
organisation/: app.py
organisation/templates/: index.html  resumes.html
recruiter/: server.py
recruiter/nlqs/: column_introspection.py  llm_driver.py  query.py  workflow.py
recruiter/nlqs/database/: database_utils.py  driver.py  postgres.py  sqlite.py
recruiter/scripts/: benchmark.py  content_helper.py  csv_to_PostgreSQL.py  csv_to_sqlite.py  description_generator.py  gradio_bot.py  tbd_column_introspection.py
templates/: base.html  chat.html  index.html  login.html  resumes.html  signup.html  upload.html
