[tool.poetry]
name = "resume-collector"
version = "0.1.0"
description = ""
authors = ["them1n9 <iamanidiotm@gmail.com>"]
readme = "README.md"

packages = [
    { include = "./nlqs" },
    { include = "./scripts" },
    { include = "./nlqs/database" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Flask = "^3.0.3"
pypdf = "^4.2.0"
langchain-openai = "^0.1.13"
langchain-community = "^0.2.6"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
gradio = "^4.37.2"
chromadb = "^0.5.3"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
werkzeug = "^3.0.4"

filetype = "^1.2.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
resumedb = "app:run"